--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.15.2",
     "sass-loader": "^8.0.0",
+    "selectize": "^0.12.6",
     "vue-template-compiler": "^2.6.11"
   }
 }
