--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/helpers": "^1.1",
         "laravel/tinker": "^2.0",
         "michelf/php-markdown": "^1.9",
-        "michelf/php-smartypants": "^1.8"
+        "michelf/php-smartypants": "^1.8",
+        "suin/php-rss-writer": "^1.6"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
@@ -65,5 +66,11 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://mirrors.aliyun.com/composer/"
+        }
     }
 }
